feature/SW-CUI-001 : master component codes commit

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION_STRING = 'mongodb+srv://cheesecakeopc:<db_password>@primary.vibljm7.mongodb.net/?retryWrites=true&w=majority&appName=primary'
+PORT=5001
